...
    <!-- HEADER: JACKPOT BOARD -->
    <!-- ListView for Events (Scrollable) -->
    <!-- Header View will be added programmatically -->

    <!-- ListView for Events (Scrollable) -->
    <ListView
        android:id="@+id/events_ListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomNavigation"
        android:padding="16dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="16dp"
...
